test: MatchCalculator, provider 추출 및 테스트 보충